# AgentDeception

./: .gitignore  README.md  analysis.py  pyproject.toml
agentdeception/: __init__.py  task.py
agentdeception/prompts/: __init__.py  dataset.py
agentdeception/scorers/: __init__.py  tool_usage.py
agentdeception/tools/: __init__.py  general.py
