[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentdeception"
version = "0.1.0"
description = "LLM evaluation for testing whether models take covert action and lie about it"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Katherine Worden"}
]
keywords = ["llm", "evaluation", "deception", "ai-safety", "inspect-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "inspect-ai>=0.3.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
openai = [
    "openai>=1.0.0",
]
google = [
    "google-generativeai>=0.3.0",
]
all-providers = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/katherineworden/AgentDeception"
Repository = "https://github.com/katherineworden/AgentDeception"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentdeception*"]

[tool.setuptools.package-data]
agentdeception = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
